[project]
name = "flask_api_for_flutter_fwb"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.11,<3.12"

dependencies = [
    "Flask==3.1.2",
    "eventlet==0.40.3",
    "flask-cors==6.0.1",
    "Flask-JWT-Extended==4.7.1",
    "Flask-SocketIO==5.5.1",
    "pymongo==3.11.0",
    "qrcode==8.2",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "click==8.1.8",
    "greenlet==3.2.4",
    "python-engineio==4.12.3",
    "python-socketio==5.14.1"
]
